<resources>
    <string name="app_name">DALIScreening</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="always">ALWAYS</string>
    <string name="sometimes">SOMETIMES</string>
    <string name="never">NEVER</string>
    <string name="create">Create</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="school_university">School</string>
    <string name="mother_tongue">Mother Tongue</string>
    <string name="section">Section</string>
    <string name="sgd">Class</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="age">Age</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="required">Required</string>
    <string name="confirm_password_diff_error">Confirm Password is different from Original</string>
    <string name="invalid_age">Invalid Age</string>
    <string name="select_gender">Select Gender</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="auth_success">Authentication Success.</string>
    <string name="designation">Designation</string>
    <string name="signup_fail">SignUp Failed</string>
    <string name="login_fail">Login Failed</string>
    <string name="user_saved">User Saved</string>
    <string name="user_sync_error">User Details not synced</string>
    <string name="locale_type">EN</string>
    <string name="schedule">Schedule for later</string>
    <string name="start">Start</string>
    <string name="password_length_error">Password must be atleast 6 characters</string>
    <string name="improper_email">Improper Email Format</string>
    <string name="next">Next</string>
    <string name="change">Change</string>
    <string name="screening_saved">Screening Saved</string>
    <string name="save_screening_error">Error while saving! Try Again</string>
    <string name="completed">COMPLETED</string>
    <string name="pending">PENDING</string>
    <string name="sort">Sort</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="screenings">Screenings</string>
    <string name="participants">Participants</string>
    <string name="settings">Settings</string>
    <string name="relationship_with_child">Relationship With Participant</string>
    <string name="class_teacher">Class Teacher</string>
    <string name="language_teacher">Language Teacher</string>
    <string name="others">Others</string>
    <string name="other">Other</string>
    <string name="estimated_time_spent_with_child">Estimated time spent with child (atleast 3 months)</string>
    <string name="months">Months</string>
    <string name="relationship_with_child_none_select_error">Select Relationship with participant</string>
    <string name="pending_screenings">Pending Screenings</string>
    <string name="back">Back</string>
    <string name="select_option_error">Please Select An Option</string>
    <string name="institution">Institution</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="password_reset_instructions">We just need your registered Email id to send you password reset instructions.</string>
    <string name="reset">Reset Password</string>
    <string name="sign_out">Sign out</string>
    <string name="logout_warn_message">Are you sure you wish to logout?</string>
    <string name="exit_warn_message">Are you sure you wish to exit?</string>
    <string name="change_language">Change Language</string>
    <string name="network_error">Network Error!</string>
    <string name="data_not_found">Data not found!</string>
    <string name="scheduled">Scheduled</string>
    <string name="welcome">WELCOME</string>
    <string name="dali">DALI</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="language">Language</string>
    <string name="exit_screening_prompt">Are you sure you want to stop current session?</string>
    <string name="done">Done</string>
    <string name="result">Evaluation</string>
    <string name="submit_screening_prompt">Are you sure you want to Submit?</string>
    <string name="arrow_back"><![CDATA[<< Back]]></string>
    <string name="mail_sent">Mail Sent</string>
    <string name="mail_error">Error while sending mail!</string>
    <string name="score">SCORE</string>
    <string name="type">TYPE</string>
    <string name="comments">Comments</string>
    <string name="enter_details_of_the_participant">Enter details of the participant</string>
    <string name="usually">USUALLY</string>
    <string name="additional_comments">Additional Comments</string>
    <string name="skip">Skip</string>
    <string name="participate_saving_error">Participant Details Not Updated</string>
    <string name="fetch_participant_error">Error While Participant Details!</string>
    <string name="select_screening_language">Select Screening Language</string>
    <string name="information">Information</string>
    <string name="confirm_participant_details">Confirm Participant Details</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="development_team">Development Team @ MGIEP</string>
    <string name="concept_and_research">Concept and Research @ NBRC</string>
    <string name="design">Design @ MGIEP and DIC, Delhi university</string>
    <string name="copyright_title">The copyright for the screening tool is owned by</string>
    <string name="clas_range_error">Class should be in between 1 and 5</string>
    <string name="years">Years</string>
    <string name="month_range_error">Months should be in between 0 to 12</string>
    <string name="month_range_error2">Months should be in between 3 to 12</string>
    <string name="medium_of_instruction">Select all languages of instruction</string>
    <string name="recommendation">Recommendations</string>
    <string name="at_risk">At Risk</string>
    <string name="not_at_risk">Not at Risk</string>
    <string name="please_provide_special_comments_for_the_child">Please provide additional comments for the child (max 200 chars)</string>
    <string name="drafts">Drafts</string>
    <string name="start_adding_participant">New Participant</string>
    <string name="screening_lanuage">Screening language</string>
    <string name="years_and">years and</string>
    <string name="months_">months.</string>
    <string name="medium_of_instruction2">Medium of instruction</string>
    <string name="name_req">Name*</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="validation_testing">Validation, Testing and Cultural Adaptation</string>
    <string name="same_instruction_language_error">Select different languages of instruction</string>
    <string name="email_not_registered">Email not registered</string>
    <string name="email_registered">Email already registered</string>
    <string name="marathi">Marathi</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="kannada">Kannada</string>
    <string name="telugu">Telugu</string>
    <string name="home_description">DALI screening is the first online screening tool for dyslexia in regional Indian languages.</string>
    <string name="prescreen_text_1">This screening tool is designed for children from classes 1 to 5(5 to 10 years). As per language research, children should be screened in all the languages in which they receive instruction.</string>
    <string name="prescreen_text_2">Therefore, this tool should be administered by the Language teacher and the Class teacher.</string>
    <string name="result_monitor">Child requires careful monitoring and supervision. Repeat screening after 3 months of remedial instruction</string>
    <string name="post_reg_info">The purpose of this screening tool is to identify children who may have learning disability, which hinders their school performance. The screening tool is designed to be comprehensive, so that it can be used as a referral questionnaire. If there is evidence that suggests a possible learning disability, the child will need to be referred for a comprehensive diagnostic assessment.</string>
    <string name="eye_sight_test">Eye-sight test by a qualified ophthalmologist to rule out problems with vision.</string>
    <string name="audio_test">Hearing test by a qualified otologist to rule out problems with auditory processes.</string>
    <string name="cognitive_test">Detailed assessment covering different language domains by a clinical/educational psychologist in all languages of instruction.</string>
    <string name="dali_about">The screening tools were developed for school teachers to screen children between classes 1-5, at risk for dyslexia. They are based on research carried by Nandini Chatterjee Singh for the development of DALI (Dyslexia Assessment for Languages of India) at the National Brain Research Centre, Manesar, India under a grant funded by the Department of Science and Technology, Govt. Department of Science and Technology, Govt. of India. Should the child be at risk, a formal assessment by a clinical psychologist MUST be carried out for confirmation.</string>
    <string name="pre_screening_info_1">On the screening tool, kindly depict the child\'s performance with respect to other children in the same class. Please take into consideration the respective child\'s home and social environment (native language, socio-economic background etc.) when evaluating the child.</string>
    <string name="reading_mst">READING</string>
    <string name="writing_mst">WRITING</string>
    <string name="mathematics">MATHEMATICS</string>
    <string name="cat_sound">SOUND AWARENESS</string>
    <string name="cat_communication">COMMUNICATION</string>
    <string name="cat_print">PRINT AWARENESS</string>
    <string name="cat_number">NUMBER CONCEPTS</string>
    <string name="cat_motor">MOTOR COORDINATION</string>
    <string name="cat_behavior">BEHAVIOR</string>
    <string name="cat_memory">MEMORY</string>
    <string name="cat_writing">WRITING AWARENESS</string>
    <string name="jst_q1">Difficulty in sound replacement games.</string>
    <string name="jst_q2">Difficulty in rhyming.</string>
    <string name="jst_q3">Difficulty with spelling common words.</string>
    <string name="jst_q4">Difficulty in identifying letters of the alphabet.</string>
    <string name="jst_q5">Difficulty in recognizing/reading common printed words.</string>
    <string name="jst_q6">Difficulty in recognizing number symbols when shown.</string>
    <string name="jst_q7">Difficulty in understanding "greater than" or "less than", "what comes before or after" concepts.</string>
    <string name="jst_q8">Difficulty in following instructions.</string>
    <string name="jst_q9">Difficulty in choosing the right words; The child fumbles while speaking.</string>
    <string name="jst_q10">Difficulty in repeating long words.</string>
    <string name="jst_q11">Difficulty in copying simple shapes (circle, square, triangle)</string>
    <string name="jst_q12">Difficulty in writing simple words in language of instruction.</string>
    <string name="jst_q13">Shows lack of attention and concentration in task. Leaves work unfinished.</string>
    <string name="jst_q14">Restless and/or over-active.</string>
</resources>