<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_home_white_24dp"
            android:id="@+id/nav_home"
            android:title="@string/home"/>

        <item
            android:icon="@drawable/ic_forum_white_24dp"
            android:id="@+id/nav_screenings"
            android:title="@string/pending_screenings" />

        <item
            android:icon="@drawable/ic_people_white_24dp"
            android:id="@+id/nav_participants"
            android:title="@string/participants" />

        <item
            android:icon="@drawable/ic_settings_white_24dp"
            android:id="@+id/nav_settings"
            android:title="@string/settings"/>

        <item
            android:icon="@drawable/ic_power_settings_new_white_24dp"
            android:id="@+id/nav_logout"
            android:title="@string/sign_out"/>

    </group>
</menu>