<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/name"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_register_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/email"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_register_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_register_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/designation"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_register_designation"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/school_university"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_register_school"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/custom_edit_text"
            android:digits="0123456789"
            android:hint="@string/age"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_register_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:textColorHint="@color/white"
                android:buttonTint="@color/white"
                android:hint="@string/male"
                android:id="@+id/edit_radio_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <RadioButton
                android:textColorHint="@color/white"
                android:buttonTint="@color/white"
                android:hint="@string/female"
                android:id="@+id/edit_radio_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:textAllCaps="false"
        android:text="@string/register"
        android:id="@+id/btn_register_submit"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="bottom"
        android:gravity="bottom|center_horizontal"
        android:textColor="@color/white"
        android:text="@string/already_registered_login_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>