<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_marginVertical="20dp"
        android:textSize="@dimen/h1"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="10dp"
        android:textSize="17sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/password_reset_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:drawablePadding="20dp"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/custom_edit_text"
        android:id="@+id/edit_reset_pass_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:textSize="@dimen/h3"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/custom_button"
        android:layout_marginHorizontal="20dp"
        android:text="@string/reset"
        android:id="@+id/btn_reset_password_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:id="@+id/tv_reset_password_back"
        android:textAllCaps="true"
        android:text="@string/arrow_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>