<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/h2"
            android:gravity="center"
            android:text="@string/select_screening_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/colorPrimary"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:id="@+id/btn_language_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <Button
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/colorPrimary"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:id="@+id/btn_language_hindi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hindi" />

        <Button
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/colorPrimary"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:id="@+id/btn_language_marathi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marathi" />

        <Button
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/colorPrimary"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:id="@+id/btn_language_kannada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kannada" />

        <Button
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/colorPrimary"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:id="@+id/btn_language_telugu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telugu" />
    </LinearLayout>

</RelativeLayout>