<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/information"
            android:textColor="@color/white"
            android:textSize="@dimen/h1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_margin="10dp"
        android:textSize="@dimen/h2"
        android:text="@string/pre_screening_info_1"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_screening_tut_1"
        android:text="@string/next"
        android:textSize="@dimen/h2"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>