<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/image_category"
        android:layout_width="60dp"
        android:layout_height="60dp" />


    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Example:" />

    <TextView
        android:id="@+id/tv_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="30dp">

        <Button
            android:id="@+id/btn_usually"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/always" />

        <Button
            android:id="@+id/btn_sometimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sometimes" />

        <Button
            android:id="@+id/btn_never"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/never" />
    </LinearLayout>
</LinearLayout>


