<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:elevation="8dp"
        android:id="@+id/post_reg_title_layout"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/information"
            android:textSize="@dimen/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <ScrollView
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/dark_light_grey"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="@dimen/h2"
            android:text="@string/post_reg_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <Button
        android:elevation="8dp"
        android:id="@+id/btn_submit_post_reg"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:textSize="@dimen/h2"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true" />
</RelativeLayout>